--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -1,9 +1,23 @@
 $app-text-color: white;
 
 .pokemon-card__header {
+  margin: 0;
+  font-family: Inter, 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
   color: $app-text-color;
 }
 
 .pokemon-card__description {
+  margin: 0;
+  font-family: Inter, 'Arial', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
   color: $app-text-color;
+}
+
+.pokemon-card__image {
+  width: 300px;
 }
