--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,15 @@
 $app-backgroun-color: black;
 
-.app {
+body {
   background-color: $app-backgroun-color;
+}
+
+.app {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-width: 320px;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   height: 100vh;
 }
