--- a/src/components/ButtonPokemon/ButtonPokemon.scss
+++ b/src/components/ButtonPokemon/ButtonPokemon.scss
@@ -1,5 +1,6 @@
 .button-pokemon {
-  margin: 10px 0 0 6px;
+  margin: 20px 0 0 10px;
+  box-shadow: 0 20px 40px -14px rgb(35, 109, 194);
   padding: 0 20px 0 20px;
   box-sizing: border-box;
   background: #1986EC;
