--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,5 @@
 @import url(./components/Header/Header.scss);
 
 @import url(./components/PokemonCard/PokemonCard.scss);
+
+@import url(./components/PokemonsHolder/PokemonsHolder.scss);
