--- a/src/components/ButtonPokemon/ButtonPokemon.scss
+++ b/src/components/ButtonPokemon/ButtonPokemon.scss
@@ -20,3 +20,12 @@
   cursor: pointer;
   opacity: 0.5;
 }
+
+@media screen and (max-width: 720px) {
+  .button-pokemon {
+    margin: 10px 0 0 5px;
+    height: 40px;
+    font-size: 14px;
+    padding: 0 10x 0 10px;
+  }
+}
