--- a/src/components/PokemonsHolder/PokemonsHolder.scss
+++ b/src/components/PokemonsHolder/PokemonsHolder.scss
@@ -1,15 +1,18 @@
 .pokemons-holder {
+  margin: 0 auto 0 auto;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  max-width: 1280px;
+  max-width: 1000px;
   padding: 0 20px 0 20px;
+  box-sizing: border-box;
 }
 
 .pokemons-holder__button-container {
   width: 500px;
   display: flex;
   flex-wrap: wrap;
+
 }
 
 @media screen and (max-width: 720px) {
