--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,5 @@
 @import url(./components/PokemonCard/PokemonCard.scss);
 
 @import url(./components/PokemonsHolder/PokemonsHolder.scss);
+
+@import url(./components/Preloader/Preloader.scss);
