--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -8,8 +8,8 @@
 }
 .rotation {
   animation-name: rotation;
-  animation-duration: 4s;
-  animation-timing-function: linear;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
   animation-fill-mode: backwards;
 }
