--- a/src/components/PokemonCard/PokemonCard.scss
+++ b/src/components/PokemonCard/PokemonCard.scss
@@ -7,16 +7,16 @@ $bacgraud-card-color: rgb(51, 32, 32);
   padding: 20px 0 20px 0;
   box-sizing: border-box;
   box-shadow: 0 20px 40px -14px rgb(156, 9, 9);
-  min-width: 300px;
-  min-height: 464px;
+  width: 300px;
+  min-height: 420px;
   position: relative;
 }
 .pokemon-card__header {
-  margin: 0;
+  margin: 0 20px 10px 20px;
   font-family: Inter, 'Arial', sans-serif;
   font-style: normal;
   font-weight: 500;
-  font-size: 40px;
+  font-size: 30px;
   text-align: center;
   color: $app-text-color;
 }
@@ -32,4 +32,5 @@ $bacgraud-card-color: rgb(51, 32, 32);
 
 .pokemon-card__image {
   width: 300px;
+  height: 300px;
 }
