--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,5 @@
 @import url(./components/PokemonsHolder/PokemonsHolder.scss);
 
 @import url(./components/Preloader/Preloader.scss);
+
+@import url(./components/Popup/Popup.scss);
