--- a/src/components/Popup/Popup.scss
+++ b/src/components/Popup/Popup.scss
@@ -62,6 +62,7 @@
 }
 
 .popup__text {
+  z-index: 2;
   margin: 20px 0 0 0;
   font-family: Inter, 'Arial', sans-serif;
   font-style: normal;
@@ -71,7 +72,8 @@
 }
 
 .popup__button-reload {
-  margin: 40px 0 0 0;
+  z-index: 2;
+  margin: 130px 0 0 0;
   padding: 0 20px 0 20px;
   box-sizing: border-box;
   background: #FFFFFF;
@@ -90,4 +92,13 @@
 .popup__button-reload:hover {
   cursor: pointer;
   opacity: 0.5;
+}
+
+.popup__image {
+  position: absolute;
+  bottom: 20px;
+  left: 90px;
+  width: 200px;
+  object-fit: cover;
+  z-index: 1;
 }
