--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 
 @import url(./vendor/fonts/inter.css);
 
+@import url(./vendor/animation.scss);
+
 @import url(./components/App/App.scss);
 
 @import url(./components/ButtonPokemon/ButtonPokemon.scss);
